tests/snapshots/output_format__folder_with_files_and_subfolder_not_merged.snap
---
source: tests/output_format.rs
expression: folder_items(&app)
---
[
    (
        "src",
        0,
    ),
    (
        "src/app",
        1,
    ),
]
