tests/snapshots/output_format__hunk_with_only_deletions.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/src/foo.rs b/src/foo.rs
deleted file mode 100644
--- a/src/foo.rs
+++ /dev/null
@@ -1,3 +1,0 @@
-gone1
-gone2
-gone3
