tests/snapshots/output_format__j_then_k_round_trips.snap
---
source: tests/output_format.rs
expression: "trace_navigation(&mut app, &[\"j\", \"j\", \"j\", \"k\", \"k\", \"k\"])"
---
start: app/core/engine/processor.rs
    j: app/plugins/auth/login.rs
    j: app/plugins/storage/cache.rs
    j: app/plugins/network/client.rs
    k: app/plugins/storage/cache.rs
    k: app/plugins/auth/login.rs
    k: app/core/engine/processor.rs
