tests/snapshots/output_format__k_cycles_through_files_reverse.snap
---
source: tests/output_format.rs
expression: "trace_navigation(&mut app, &[\"k\", \"k\", \"k\", \"k\", \"k\", \"k\"])"
---
start: app/core/engine/processor.rs
    k: app/plugins/logging/output.rs
    k: app/plugins/network/client.rs
    k: app/plugins/storage/cache.rs
    k: app/plugins/auth/login.rs
    k: app/core/engine/processor.rs
    k: app/plugins/logging/output.rs
