tests/snapshots/output_format__left_on_file_goes_to_parent_folder.snap
---
source: tests/output_format.rs
expression: "trace_navigation(&mut app, &[\"j\", \"left\"])"
---
start: [folder] app
    j: app/core/engine/processor.rs
 left: [folder] app/core/engine
