tests/snapshots/output_format__left_on_file_then_left_on_folder.snap
---
source: tests/output_format.rs
expression: "trace_navigation(&mut app, &[\"j\", \"j\", \"left\", \"left\", \"left\"])"
---
start: [folder] app
    j: app/core/engine/processor.rs
    j: app/plugins/auth/login.rs
 left: [folder] app/plugins/auth
 left: [folder] app/plugins/auth
 left: [folder] app/plugins
